fix: horizontal scroll on mobile (#96)
* feat: cleanup after generating html

* fix: rebase issue

* feat: removing raw css

* feat: adding image viewing mode

* fix: ignoring *_templ.go files

* fix: ignoring main bin and adding towebp-l

* fix: adding go.mod

* fix: big screw up, merged main into dev and it messed up everyting

* fix: workflow

* fix: fixing .gitignore on main branch

* fix: main.go

* fix: removing .air.toml from main

* fix: go.sum

* fix: fixing wide image width in changing screen

* fix: trying to fix nav on mobile

* fix: fixing nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* feat: changing nav completely and accent color changes

* fix: something went wrong generating css on previous commit

* feat: fixing minor bugs

* fix: spacing

* fix: horizontal scroll on mobile

---------

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -58,13 +58,14 @@
         @apply acc-anim fixed z-[100] w-10 h-10 md:w-14 md:h-14 xl:w-[4.5rem] xl:h-[4.5rem] bottom-0 right-0 m-6 md:m-8 xl:m-16 flex items-center justify-center rounded-full bg-light-btn-p dark:bg-dark-btn-p hover:ring-2 ring-accent-p touch-none
     }
 
-    .unselectable {
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
     }
 }
 
